check with w3c validator

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -530,8 +530,8 @@
                     </div>
 
                     <div class="carousel___btnContainer">
-                        <button class="carousel__btn" id="prevBtn"><</button>
-                        <button class="carousel__btn" id="nextBtn">></button>
+                        <button class="carousel__btn" id="prevBtn"></button>
+                        <button class="carousel__btn" id="nextBtn"></button>
                     </div>
 
                 </div>
