--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -460,9 +460,9 @@
                     </label>
                     <!--container 2 overviewSection -->
                     <label class="overviewSection__labelContainer overviewSection__labelContainer--location">
-                        <div class="overviewSection__text overviewSection__text--location">Kanton</div>
-                        <div class="overviewSection__text overviewSection__text--choose">auswählen</div>
-                        <div></div>
+                        <span class="overviewSection__text overviewSection__text--location">Kanton</span>
+                        <span class="overviewSection__text overviewSection__text--choose">auswählen</span>
+
                         <svg class="overviewSection__icon" width="17px" height="10px" viewBox="0 0 17 10" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
