update the logo

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -30,9 +30,12 @@
                     </div>
                 </div>
                 <span class="headerSection__text btnTabsHeader" id="headerSection__textMenu">Menu</span>
-                <img  class="headerSection__flLogo" id="flLogo" src="images/links/FestivalLovers_Logo.png" alt="FestivalLovers Logo">
-                <img  class="headerSection__flLogoWhite" id="flLogoWhite" src="images/links/FestivalLovers_Logo_weiss.png" alt="FestivalLovers Logo">
-                <div class="headerSection__IconLike">
+                <a class="headerSection__flLogoLink" href="http://deepdevdiver.com/">
+                    <img  class="headerSection__flLogo" id="flLogo" src="images/links/FestivalLovers_Logo.png" alt="FestivalLovers Logo">
+                </a>
+                <a class="headerSection__flLogoLink headerSection__flLogoLink--white" href="http://deepdevdiver.com/">
+                    <img  class="headerSection__flLogoWhite" id="flLogoWhite" src="images/links/FestivalLovers_Logo_weiss.png" alt="FestivalLovers Logo">
+                </a>                <div class="headerSection__IconLike">
                     <svg height="23px" version="1.1" viewBox="0 0 24 23" width="24px" xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
