update mobile logo

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -35,7 +35,8 @@
                 </a>
                 <a class="headerSection__flLogoLink headerSection__flLogoLink--white" href="http://deepdevdiver.com/">
                     <img  class="headerSection__flLogoWhite" id="flLogoWhite" src="images/links/FestivalLovers_Logo_weiss.png" alt="FestivalLovers Logo">
-                </a>                <div class="headerSection__IconLike">
+                </a>
+                <a class="headerSection__IconLike" href="http://deepdevdiver.com/">
                     <svg height="23px" version="1.1" viewBox="0 0 24 23" width="24px" xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -51,7 +52,7 @@
                             </g>
                         </g>
                     </svg>
-                </div>
+                </a>
 
             </div>
 
