start implementing counter

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -936,7 +936,7 @@
     </div>
 </div>
 
-
+<!-- is necessary for gulp build (build:js and endbuild) -->
 <!-- build:js -->
 <script type="module" src="js/main.js"></script>
 
