--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -1206,9 +1206,9 @@
     </div>
 </div>
 
+<!-- is necessary for gulp build (build:js and endbuild) -->
 <!-- build:js -->
 <script type="module" src="js/main.js"></script>
-
 <!-- endbuild -->
 </body>
 </html>
