--- a/src/ticket-order.html
+++ b/src/ticket-order.html
@@ -509,9 +509,9 @@
                             </div>
                         </div>
                         <div class="ticketChooseSection__lowerContainer">
-                            <button class="ticketChooseSection__btn">-</button>
-                            <p><span>0</span> Tickets</p>
-                            <button class="ticketChooseSection__btn">+</button>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--plus ">-</button>
+                            <p><span class="ticketChooseSection__number">0</span> Tickets</p>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--minus">+</button>
 
                         </div>
                     </div>
@@ -561,9 +561,9 @@
                             </div>
                         </div>
                         <div class="ticketChooseSection__lowerContainer">
-                            <button class="ticketChooseSection__btn">-</button>
-                            <p><span>0</span> Tickets</p>
-                            <button class="ticketChooseSection__btn">+</button>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--plus ">-</button>
+                            <p><span class="ticketChooseSection__number">0</span> Tickets</p>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--minus">+</button>
 
                         </div>
                     </div>
@@ -607,9 +607,9 @@
                             </div>
                         </div>
                         <div class="ticketChooseSection__lowerContainer">
-                            <button class="ticketChooseSection__btn">-</button>
-                            <p><span>0</span> Tickets</p>
-                            <button class="ticketChooseSection__btn">+</button>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--plus ">-</button>
+                            <p><span class="ticketChooseSection__number">0</span> Tickets</p>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--minus">+</button>
 
                         </div>
                     </div>
@@ -653,9 +653,9 @@
                             </div>
                         </div>
                         <div class="ticketChooseSection__lowerContainer">
-                            <button class="ticketChooseSection__btn">-</button>
-                            <p><span>0</span> Tickets</p>
-                            <button class="ticketChooseSection__btn">+</button>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--plus ">-</button>
+                            <p><span class="ticketChooseSection__number">0</span> Tickets</p>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--minus">+</button>
 
                         </div>
                     </div>
@@ -703,9 +703,9 @@
                             </div>
                         </div>
                         <div class="ticketChooseSection__lowerContainer">
-                            <button class="ticketChooseSection__btn">-</button>
-                            <p><span>0</span> Tickets</p>
-                            <button class="ticketChooseSection__btn">+</button>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--plus ">-</button>
+                            <p><span class="ticketChooseSection__number">0</span> Tickets</p>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--minus">+</button>
 
                         </div>
                     </div>
@@ -749,9 +749,9 @@
                             </div>
                         </div>
                         <div class="ticketChooseSection__lowerContainer">
-                            <button class="ticketChooseSection__btn">-</button>
-                            <p><span>0</span> Tickets</p>
-                            <button class="ticketChooseSection__btn">+</button>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--plus ">-</button>
+                            <p><span class="ticketChooseSection__number">0</span> Tickets</p>
+                            <button class="ticketChooseSection__btn ticketChooseSection__btn--minus">+</button>
 
                         </div>
                     </div>
@@ -891,9 +891,9 @@
     </div>
 </div>
 
+<!-- is necessary for gulp build (build:js and endbuild) -->
 <!-- build:js -->
 <script type="module" src="js/main.js"></script>
-
 <!-- endbuild -->
 </body>
 </html>
