--- a/src/index.html
+++ b/src/index.html
@@ -725,6 +725,8 @@
 
     </div>
 </div>
+
+<!-- is necessary for gulp build (build:js and endbuild) -->
 <!-- build:js -->
 <script type="module" src="js/main.js"></script>
 <!-- endbuild -->
