--- a/src/ticket-order.html
+++ b/src/ticket-order.html
@@ -508,7 +508,7 @@
                                 <div class="ticketChooseSection__availableBox"></div>
                             </div>
                         </div>
-                        <div class="ticketChooseSection__lowerContainer">
+                        <div class="ticketChooseSection__lowerContainer copy">
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--minus ">-</button>
                             <p><span class="ticketChooseSection__number">0</span> Tickets</p>
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--plus">+</button>
@@ -560,7 +560,7 @@
                                 <div class="ticketChooseSection__availableBox"></div>
                             </div>
                         </div>
-                        <div class="ticketChooseSection__lowerContainer">
+                        <div class="ticketChooseSection__lowerContainer copy">
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--minus ">-</button>
                             <p><span class="ticketChooseSection__number">0</span> Tickets</p>
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--plus">+</button>
@@ -606,7 +606,7 @@
                                 <div class="ticketChooseSection__availableBox"></div>
                             </div>
                         </div>
-                        <div class="ticketChooseSection__lowerContainer">
+                        <div class="ticketChooseSection__lowerContainer copy">
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--minus ">-</button>
                             <p><span class="ticketChooseSection__number">0</span> Tickets</p>
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--plus">+</button>
@@ -652,7 +652,7 @@
                                 <div class="ticketChooseSection__availableBox"></div>
                             </div>
                         </div>
-                        <div class="ticketChooseSection__lowerContainer">
+                        <div class="ticketChooseSection__lowerContainer copy">
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--minus ">-</button>
                             <p><span class="ticketChooseSection__number">0</span> Tickets</p>
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--plus">+</button>
@@ -702,7 +702,7 @@
                                 <div class="ticketChooseSection__availableBox"></div>
                             </div>
                         </div>
-                        <div class="ticketChooseSection__lowerContainer">
+                        <div class="ticketChooseSection__lowerContainer copy">
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--minus ">-</button>
                             <p><span class="ticketChooseSection__number">0</span> Tickets</p>
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--plus">+</button>
@@ -748,7 +748,7 @@
                                 <div class="ticketChooseSection__availableBox"></div>
                             </div>
                         </div>
-                        <div class="ticketChooseSection__lowerContainer">
+                        <div class="ticketChooseSection__lowerContainer copy">
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--minus ">-</button>
                             <p><span class="ticketChooseSection__number">0</span> Tickets</p>
                             <button class="ticketChooseSection__btn ticketChooseSection__btn--plus">+</button>
