--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -305,6 +305,8 @@
                 </div>
 
 
+
+
             </div>
 
             <!-- start with textSection -->
@@ -522,26 +524,26 @@
 
                     </div>
 
-                    <div class="carousel-container">
-                        <div class="carousel-slide">
-                            <img class="carousel_pic" src="./images/slider/carousel5.jpg" id="lastClone" alt="">
-                            <img class="carousel_pic" src="./images/slider/carousel2.jpg" alt="">
-                            <img class="carousel_pic" src="./images/slider/carousel3.jpg" alt="">
-                            <img class="carousel_pic" src="./images/slider/carousel4.jpg" alt="">
-                            <img class="carousel_pic" src="./images/slider/carousel5.jpg" alt="">
-                            <img class="carousel_pic" src="./images/slider/carousel2.jpg" id="firstClone" alt="">
-                        </div>
-                    </div>
+<!--&lt;!&ndash;                    start slider&ndash;&gt;-->
+<!--                    <div class="carousel-container">-->
+<!--                        <div class="carousel-slide">-->
+<!--                            <img class="carousel_pic" src="./images/slider/carousel5.jpg" id="lastClone" alt="">-->
+<!--                            <img class="carousel_pic" src="./images/slider/carousel2.jpg" alt="">-->
+<!--                            <img class="carousel_pic" src="./images/slider/carousel3.jpg" alt="">-->
+<!--                            <img class="carousel_pic" src="./images/slider/carousel4.jpg" alt="">-->
+<!--                            <img class="carousel_pic" src="./images/slider/carousel5.jpg" alt="">-->
+<!--                            <img class="carousel_pic" src="./images/slider/carousel2.jpg" id="firstClone" alt="">-->
+<!--                        </div>-->
+<!--                    </div>-->
 
-                    <div class="carousel___btnContainer">
-                        <button class="carousel__btn" id="prevBtn"></button>
-                        <button class="carousel__btn" id="nextBtn"></button>
-                    </div>
-
-                </div>
+<!--                    <div class="carousel___btnContainer">-->
+<!--                        <button class="carousel__btn" id="prevBtn"></button>-->
+<!--                        <button class="carousel__btn" id="nextBtn"></button>-->
+<!--                    </div>-->
 
 
-                <!-- end of textSection -->
+
+                    <!-- end of textSection -->
             </div>
 
             <!-- start with lineUpSection -->
@@ -930,6 +932,9 @@
             </div>
 
 
+
+
+
         </footer>
         <!-- end of footerSection -->
 
@@ -939,8 +944,8 @@
 <!-- is necessary for gulp build (build:js and endbuild) -->
 <!-- build:js -->
 <script type="module" src="js/main.js"></script>
-
 <!-- endbuild -->
+
 
 <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrzQCVf_Et09zdLPI8Y8gGHKBTP5cF4Go&callback=initMap&map_ids=2ab83db5f283fb46"></script>
