new structure for login.scss

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -84,7 +84,7 @@
                     <div class="loginSection__containter" id="loginSection__containter">
                         <div class="loginSection__triangle"></div>
 
-                        <div class="LoginSection__BoxA">
+                        <div class="loginSection__BoxA">
                             <form method="post">
                                 <input class="loginSection__input copy" placeholder="E-Mail Adresse" type="text">
                             </form>
@@ -99,7 +99,7 @@
                             <P class="loginSection__passwordText copy"><u class="underline">Passwort </u>vergessen?
                             </P>
                         </div>
-                        <div class="LoginSection__BoxB">
+                        <div class="loginSection__BoxB">
                             <p class="loginSection__text copy">Neu bei FestivalLovers?<br>
                                 jetzt <u>registrieren.</u></p>
                         </div>
