--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -550,7 +550,7 @@
 
                 <!-- start with cardContainer -->
                 <div class="overviewSection__cardContainerTiles">
-                    <a class="overviewSection__detailSite" href="detailsite.html">
+
                         <div class="overviewSection__cardBox">
                             <div class="overviewSection__pic"></div>
                             <div class="overviewSection__cardBoxContent">
@@ -580,7 +580,7 @@
                                     <span class="overviewSection__slash">/</span>
                                     <span class="overviewSection__date"> 13. Aug – 15. Aug 2016</span>
                                 </p>
-                                <h2 class="overviewSection__cardTitle">Sur Le Lac</h2>
+                                <a class="overviewSection__detailSite" href="detailsite.html"><h2 class="overviewSection__cardTitle">Sur Le Lac</h2></a>
                                 <p class="overviewSection__cardText copy">Das Festival präsentiert Künstler,
                                     welche sich im Spannungsfeld
                                     zwischen verschiedensten musikalischen Strömungen und Einflüssen …</p>
@@ -609,9 +609,9 @@
 
 
                         </div>
-                    </a>
 
-                    <a class="overviewSection__detailSite" href="detailsite.html">
+
+
                     <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
@@ -639,7 +639,7 @@
                                 </span><span class="overviewSection__slash">/</span>
                                 <span class="overviewSection__date">08. Jul – 09. Jul 2016</span>
                             </p>
-                            <h2 class="overviewSection__cardTitle">Stars of Sounds</h2>
+                            <a class="overviewSection__detailSite" href="detailsite.html"><h2 class="overviewSection__cardTitle">Stars of Sounds</h2></a>
                             <p class="overviewSection__cardText copy">Im Juli verwendelt sich der Stadtplatz von
                                 Aarberg wieder in die einzigartige Kulisse des Stars of Sounds. Erlebe magische …</p>
                             <div class="overviewSection__noticeContainer">
@@ -667,9 +667,9 @@
 
                     </div>
 
-                    </a>
 
-                    <a class="overviewSection__detailSite" href="detailsite.html">
+
+
                     <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
@@ -697,7 +697,7 @@
                                 <span class="overviewSection__slash">/</span>
                                 <span class="overviewSection__date">19. Jul – 24. Jul 2016</span>
                             </p>
-                            <h2 class="overviewSection__cardTitle">Paléo Festival</h2>
+                            <a class="overviewSection__detailSite" href="detailsite.html"><h2 class="overviewSection__cardTitle">Paléo Festival</h2></a>
                             <p class="overviewSection__cardText copy">Bienvenue! In Nyon treffen sich jedes Jahr die
                                 ganze Grossen aus der Electronic Szene. Die Tickets sind sehr begehrt und schnell …</p>
                             <div class="overviewSection__noticeContainer">
@@ -724,9 +724,9 @@
 
 
                     </div>
-                    </a>
 
-                    <a class="overviewSection__detailSite" href="detailsite.html">
+
+
                     <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
@@ -755,7 +755,7 @@
                                 <span class="overviewSection__slash">/</span>
                                 <span class="overviewSection__date">29. Jun – 02. Jul 2016</span>
                             </p>
-                            <h2 class="overviewSection__cardTitle">Blues & Jazz Festival</h2>
+                            <a class="overviewSection__detailSite" href="detailsite.html"><h2 class="overviewSection__cardTitle">Blues & Jazz Festival</h2></a>
                             <p class="overviewSection__cardText copy">Alles ist schön beim blues’n’jazz –
                                 sogar der Regen. Es werden neun Konzerte am Rapperswiler Hafen auf drei Bühnen …</p>
                             <div class="overviewSection__noticeContainer">
@@ -782,9 +782,9 @@
 
 
                     </div>
-                    </a>
 
-                    <a class="overviewSection__detailSite" href="detailsite.html">
+
+
                     <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
@@ -812,7 +812,7 @@
                                 <span class="overviewSection__date">14. Aug – 15. Aug 2016</span>
 
                             </p>
-                            <h2 class="overviewSection__cardTitle">Openair Basel</h2>
+                            <a class="overviewSection__detailSite" href="detailsite.html"><h2 class="overviewSection__cardTitle">Openair Basel</h2></a>
                             <p class="overviewSection__cardText copy">Eine Bühne, zwei Tage und sechs Bands,
                                 kulinarische Köstlichkeiten und eine
                                 riesige Aftershowparty das alles erwartet euch … </p>
@@ -840,9 +840,9 @@
 
 
                     </div>
-                    </a>
 
-                    <a class="overviewSection__detailSite" href="detailsite.html">
+
+
                     <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
@@ -868,7 +868,7 @@
                                 <span class="overviewSection__slash">/</span>
                                 <span class="overviewSection__date"> 30. Jun – 03. Jul2016</span>
                             </p>
-                            <h2 class="overviewSection__cardTitle">Openair St. Gallen</h2>
+                            <a class="overviewSection__detailSite" href="detailsite.html"><h2 class="overviewSection__cardTitle">Openair St. Gallen</h2></a>
                             <p class="overviewSection__cardText copy">Das Open Air St. Gallen hat Tradition
                                 denn es geht dieses Jahr bereits die 40. Edition über die Bühne.
                                 Nicht verpassen denn zum …
@@ -897,9 +897,9 @@
 
 
                     </div>
-                    </a>
 
-                    <a class="overviewSection__detailSite" href="detailsite.html">
+
+
                     <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
@@ -927,7 +927,7 @@
                                 <span class="overviewSection__slash">/</span>
                                 <span class="overviewSection__date"> 16. Jul 2016</span>
                             </p>
-                            <h2 class="overviewSection__cardTitle">Open Ear Festival</h2>
+                            <a class="overviewSection__detailSite" href="detailsite.html"><h2 class="overviewSection__cardTitle">Open Ear Festival</h2></a>
                             <p class="overviewSection__cardText copy">Das wohl kleinste Openair im Toggenburg
                                 kann sich durchaus sehen lassen.
                                 Die Devise “klein aber fein” trifft hier absolut zu und …
@@ -956,9 +956,9 @@
 
 
                     </div>
-                    </a>
 
-                    <a class="overviewSection__detailSite" href="detailsite.html">
+
+
                     <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
@@ -984,7 +984,7 @@
                                 <span class="overviewSection__slash">/</span>
                                 <span class="overviewSection__date"> 14. Jul – 17. Jul 2016</span>
                             </p>
-                            <h2 class="overviewSection__cardTitle">Gurten Festival</h2>
+                            <a class="overviewSection__detailSite" href="detailsite.html"><h2 class="overviewSection__cardTitle">Gurten Festival</h2></a>
                             <p class="overviewSection__cardText copy">Party auf dem Berner Hausberg mit guter
                                 Stimmungen und legendären Auftritten. Freut euch auf fette Beats, rockige Riffs …
                             </p>
@@ -1012,9 +1012,9 @@
 
 
                     </div>
-                    </a>
 
-                    <a class="overviewSection__detailSite" href="detailsite.html">
+
+
                     <div class="overviewSection__cardBox">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
@@ -1041,7 +1041,7 @@
                                 <span class="overviewSection__slash">/</span>
                                 <span class="overviewSection__date">16. Jul 2016</span>
                             </p>
-                            <h2 class="overviewSection__cardTitle">Montreux Jazz</h2>
+                            <a class="overviewSection__detailSite" href="detailsite.html"><h2 class="overviewSection__cardTitle">Montreux Jazz</h2></a>
                             <p class="overviewSection__cardText copy">Ein grosser See, Berge und ganz viel Jazz Musik.
                                 Bereits seit 50 Jahren wird in Montreux Musikgeschichte geschrieben …
                             </p>
@@ -1069,7 +1069,7 @@
 
 
                     </div>
-                    </a>
+
 
                 </div>
 
