--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -551,7 +551,7 @@
                 <!-- start with cardContainer -->
                 <div class="overviewSection__cardContainerTiles">
 
-                        <div class="overviewSection__cardBox">
+                        <div class="overviewSection__cardBox overviewSection__cardBox--borderBottomIndie">
                             <div class="overviewSection__pic"></div>
                             <div class="overviewSection__cardBoxContent">
                                 <div class="overviewSection__iconPanel overviewSection__iconPanel--indie">
@@ -585,19 +585,15 @@
                                     welche sich im Spannungsfeld
                                     zwischen verschiedensten musikalischen Strömungen und Einflüssen …</p>
                                 <div class="overviewSection__noticeContainer">
-                                    <svg class="overviewSection__noticeStar" width="24px" height="23px"
-                                         viewBox="0 0 24 23"
-                                         version="1.1" xmlns="http://www.w3.org/2000/svg"
-                                         xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <svg class="overviewSection__noticeStar" width="24px" height="23px" viewBox="0 0 24 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
-                                        <title>detail_merken</title>
+                                        <title>detail_merken_filled</title>
                                         <desc>Created with Sketch.</desc>
                                         <defs></defs>
                                         <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                            <g id="detail_merken" transform="translate(-12.000000, -13.000000)"
-                                               fill="#1E201D">
-                                                <g transform="translate(12.000000, 13.000000)" id="Shape">
-                                                    <path d="M12.3763636,0.428181818 L14.8609091,8.14254545 L22.9729091,8.13381818 C23.3105455,8.13381818 23.5876364,8.40218182 23.5876364,8.73981818 C23.5876364,8.93890909 23.484,9.12054545 23.3367273,9.23345455 L23.3367273,9.23345455 L16.7656364,13.9865455 L19.2850909,21.7003636 C19.3887273,22.0205455 19.2158182,22.3581818 18.8956364,22.4623636 C18.6878182,22.5316364 18.4625455,22.4798182 18.3070909,22.35 L11.796,17.5963636 L5.24236364,22.3756364 C4.96527273,22.5747273 4.58454545,22.5141818 4.39418182,22.2458182 C4.27309091,22.0810909 4.24690909,21.8732727 4.30745455,21.7003636 L4.29872727,21.7003636 L6.82690909,13.9865455 L0.255818182,9.23290909 C-0.0212727273,9.03381818 -0.0818181818,8.65309091 0.117272727,8.38418182 C0.247090909,8.20254545 0.446181818,8.11581818 0.654,8.13327273 L8.72290909,8.142 L11.2161818,0.427636364 C11.3198182,0.107454545 11.6574545,-0.066 11.9781818,0.0294545455 C12.1772727,0.0992727273 12.3152727,0.246 12.3763636,0.428181818 L12.3763636,0.428181818 L12.3763636,0.428181818 Z M13.8392727,8.93836364 L11.796,2.59254545 L9.744,8.93890909 L9.744,8.93890909 C9.666,9.18981818 9.43254545,9.36327273 9.16418182,9.36327273 L2.49763636,9.354 L7.89981818,13.2589091 L7.89981818,13.2589091 C8.10763636,13.4149091 8.20309091,13.6832727 8.11636364,13.9429091 L6.04745455,20.2805455 L11.424,16.3587273 C11.6318182,16.2027273 11.9263636,16.194 12.1510909,16.35 L17.5358182,20.2805455 L15.4750909,13.9690909 C15.3796364,13.7181818 15.4576364,13.4236364 15.6829091,13.2589091 L21.0938182,9.354 L14.4447273,9.36272727 C14.1769091,9.38018182 13.926,9.20672727 13.8392727,8.93836364 L13.8392727,8.93836364 L13.8392727,8.93836364 Z"></path>
+                                            <g id="detail_merken_filled" transform="translate(-12.000000, -12.000000)" fill="#000000">
+                                                <g transform="translate(12.000000, 12.000000)" id="Shape">
+                                                    <path d="M12.2412,0.9096 L15.2148,7.9476 L22.8276,8.6016 C23.3556,8.6472 23.5704,9.306 23.1696,9.6528 L17.3952,14.6556 L19.1256,22.098 C19.2456,22.6152 18.6852,23.022 18.2316,22.7472 L11.6892,18.8016 L5.1468,22.7472 C4.692,23.0208 4.1328,22.614 4.2528,22.098 L5.9832,14.6556 L0.2076,9.6516 C-0.1932,9.3048 0.0204,8.646 0.5496,8.6004 L8.1624,7.9464 L11.136,0.9096 C11.3424,0.42 12.0348,0.42 12.2412,0.9096 L12.2412,0.9096 Z"></path>
                                                 </g>
                                             </g>
                                         </g>
@@ -612,7 +608,7 @@
 
 
 
-                    <div class="overviewSection__cardBox">
+                    <div class="overviewSection__cardBox overviewSection__cardBox--borderBottomHipHopp">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--hiphop">
@@ -670,7 +666,7 @@
 
 
 
-                    <div class="overviewSection__cardBox">
+                    <div class="overviewSection__cardBox overviewSection__cardBox--borderBottomElectronic">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--electronic">
@@ -727,7 +723,7 @@
 
 
 
-                    <div class="overviewSection__cardBox">
+                    <div class="overviewSection__cardBox overviewSection__cardBox--borderBottomJazz">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--jazz">
@@ -785,7 +781,7 @@
 
 
 
-                    <div class="overviewSection__cardBox">
+                    <div class="overviewSection__cardBox overviewSection__cardBox--borderBottomIndie">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--indie">
@@ -843,7 +839,7 @@
 
 
 
-                    <div class="overviewSection__cardBox">
+                    <div class="overviewSection__cardBox overviewSection__cardBox--borderBottomPopRock">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--poprock">
@@ -900,7 +896,7 @@
 
 
 
-                    <div class="overviewSection__cardBox">
+                    <div class="overviewSection__cardBox overviewSection__cardBox--borderBottomHipHopp">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--hiphop">
@@ -959,7 +955,7 @@
 
 
 
-                    <div class="overviewSection__cardBox">
+                    <div class="overviewSection__cardBox overviewSection__cardBox--borderBottomPopRock">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--poprock">
@@ -1015,7 +1011,7 @@
 
 
 
-                    <div class="overviewSection__cardBox">
+                    <div class="overviewSection__cardBox overviewSection__cardBox--borderBottomJazz">
                         <div class="overviewSection__pic"></div>
                         <div class="overviewSection__cardBoxContent">
                             <div class="overviewSection__iconPanel overviewSection__iconPanel--jazz">
