links for breadcrumbs

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -348,7 +348,7 @@
                             </g>
                         </g>
                     </svg>
-                    <div class="textSection__festivals breadcrumbInfosDatesLikes">Festivals</div>
+                    <a href="overview-festivals.html"><div class="overviewSection__festivals breadcrumbInfosDatesLikes">Festivals</div></a>
                     <div class="textSection__dropdownContainer">
                         <svg class="textSection__dropdown" width="17px" height="10px" viewBox="0 0 17 10" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -384,8 +384,8 @@
                             </g>
                         </g>
                     </svg>
-                    <div class="textSection__festivals textSection__festivals--2 breadcrumbInfosDatesLikes">Sur le lac
-                    </div>
+                    <a href="detailsite.html"><div class="textSection__festivals textSection__festivals--2 breadcrumbInfosDatesLikes">Sur le lac</div></a>
+
                     <div class="textSection__dropdownContainer textSection__dropdownContainer--2">
                         <svg class="textSection__dropdown" width="17px" height="10px" viewBox="0 0 17 10" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
