--- a/src/ticket-order.html
+++ b/src/ticket-order.html
@@ -317,7 +317,7 @@
                         </g>
                     </svg>
 
-                    <div class="ticketOrder__festivals breadcrumbInfosDatesLikes">Festivals</div>
+                    <a href="overview-festivals.html"><div class="overviewSection__festivals breadcrumbInfosDatesLikes">Festivals</div></a>
 
                     <div class="ticketOrder__dropdownContainer">
                         <svg class="ticketOrder__dropdown" width="17px" height="10px" viewBox="0 0 17 10" version="1.1"
@@ -356,8 +356,8 @@
                         </g>
                     </svg>
 
-                    <div class="ticketOrder__festivals ticketOrder__festivals--2 breadcrumbInfosDatesLikes">Sur le lac
-                    </div>
+                    <a href="detailsite.html"><div class="ticketOrder__festivals ticketOrder__festivals--2 breadcrumbInfosDatesLikes">Sur le lac</div></a>
+
 
                     <div class="ticketOrder__dropdownContainer ticketOrder__dropdownContainer--2">
                         <svg class="ticketOrder__dropdown" width="17px" height="10px" viewBox="0 0 17 10" version="1.1"
@@ -396,8 +396,8 @@
                         </g>
                     </svg>
 
-                    <div class="ticketOrder__festivals ticketOrder__ticket--3 breadcrumbInfosDatesLikes">Tickets
-                    </div>
+                    <a href="ticket-order.html"><div class="ticketOrder__festivals ticketOrder__ticket--3 breadcrumbInfosDatesLikes">Tickets</div></a>
+
                 </div>
 
             </div>
