--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -298,7 +298,7 @@
                             </g>
                         </g>
                     </svg>
-                    <div class="overviewSection__festivals breadcrumbInfosDatesLikes">Festivals</div>
+                    <a href="overview-festivals.html"><div class="overviewSection__festivals breadcrumbInfosDatesLikes">Festivals</div></a>
                     <div class="overviewSection__dropdownContainer">
                         <svg class="overviewSection__dropdown" width="17px" height="10px" viewBox="0 0 17 10" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
