update link in footer

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -525,21 +525,21 @@
                     </div>
 
 <!--&lt;!&ndash;                    start slider&ndash;&gt;-->
-<!--                    <div class="carousel-container">-->
-<!--                        <div class="carousel-slide">-->
-<!--                            <img class="carousel_pic" src="./images/slider/carousel5.jpg" id="lastClone" alt="">-->
-<!--                            <img class="carousel_pic" src="./images/slider/carousel2.jpg" alt="">-->
-<!--                            <img class="carousel_pic" src="./images/slider/carousel3.jpg" alt="">-->
-<!--                            <img class="carousel_pic" src="./images/slider/carousel4.jpg" alt="">-->
-<!--                            <img class="carousel_pic" src="./images/slider/carousel5.jpg" alt="">-->
-<!--                            <img class="carousel_pic" src="./images/slider/carousel2.jpg" id="firstClone" alt="">-->
-<!--                        </div>-->
-<!--                    </div>-->
+                    <div class="carousel-container">
+                        <div class="carousel-slide">
+                            <img class="carousel_pic" src="./images/slider/carousel5.jpg" id="lastClone" alt="">
+                            <img class="carousel_pic" src="./images/slider/carousel2.jpg" alt="">
+                            <img class="carousel_pic" src="./images/slider/carousel3.jpg" alt="">
+                            <img class="carousel_pic" src="./images/slider/carousel4.jpg" alt="">
+                            <img class="carousel_pic" src="./images/slider/carousel5.jpg" alt="">
+                            <img class="carousel_pic" src="./images/slider/carousel2.jpg" id="firstClone" alt="">
+                        </div>
+                    </div>
 
-<!--                    <div class="carousel___btnContainer">-->
-<!--                        <button class="carousel__btn" id="prevBtn"></button>-->
-<!--                        <button class="carousel__btn" id="nextBtn"></button>-->
-<!--                    </div>-->
+                    <div class="carousel___btnContainer">
+                        <button class="carousel__btn" id="prevBtn"><</button>
+                        <button class="carousel__btn" id="nextBtn">></button>
+                    </div>
 
 
 
