--- a/src/index.html
+++ b/src/index.html
@@ -606,7 +606,7 @@
         <footer class="footerSection">
             <ul class="footerSection__box1">
                 <li><a class="footerSection__item footerLabels" href="overview-festivals.html">FESTIVALS</a></li>
-                <li><a class="footerSection__item footerLabels" href="#magazinSection">MAGAZIN</a></li>
+                <li><a class="footerSection__item footerLabels" href="#magazineSection">MAGAZIN</a></li>
                 <li><a class="footerSection__item footerLabels" href="#newsSection">NEWS</a></li>
             </ul>
             <ul class="footerSection__box2">
