replace the if else through toggle

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -29,7 +29,8 @@
                         <div class="rack lower"></div>
                     </div>
                 </div>
-                <span class="headerSection__text btnTabsHeader" id="headerSection__textMenu">Menu</span>
+                <span class="headerSection__textMenu btnTabsHeader">Menu</span>
+                <span class="headerSection__textClose headerSection__textClose--hidden btnTabsHeader">Schliessen</span>
                 <a class="headerSection__flLogoLink" href="http://deepdevdiver.com/">
                     <img  class="headerSection__flLogo" id="flLogo" src="images/links/FestivalLovers_Logo.png" alt="FestivalLovers Logo">
                 </a>
