svg for break audio

--- a/src/index.html
+++ b/src/index.html
@@ -481,6 +481,7 @@
                 <div class="discoverySection__imgContainer">
                     <div class="discoverySection__imgBox discoverySection__imgBox--jazz">
                         <div class="discoverySection__play"></div>
+                        <div class="discoverySection__stop"></div>
                         <audio src=""></audio>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--hiphop">
