playMusic function in progress

--- a/src/index.html
+++ b/src/index.html
@@ -486,18 +486,22 @@
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--hiphop">
                         <div class="discoverySection__play"></div>
+                        <div class="discoverySection__stop"></div>
                         <audio src=""></audio>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--indie">
                         <div class="discoverySection__play"></div>
+                        <div class="discoverySection__stop"></div>
                         <audio src=""></audio>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--poprock">
                         <div class="discoverySection__play"></div>
+                        <div class="discoverySection__stop"></div>
                         <audio src=""></audio>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--electronic">
                         <div class="discoverySection__play"></div>
+                        <div class="discoverySection__stop"></div>
                         <audio src=""></audio>
                     </div>
                 </div>
