playMusic function toggle play and stop

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,12 @@
                 <span class="headerSection__textMenu btnTabsHeader">Menu</span>
                 <span class="headerSection__textClose headerSection__textClose--hidden btnTabsHeader">Schliessen</span>
                 <a class="headerSection__flLogoLink" href="http://deepdevdiver.com/">
-                <img  class="headerSection__flLogo" id="flLogo" src="images/links/FestivalLovers_Logo.png" alt="FestivalLovers Logo">
+                    <img class="headerSection__flLogo" id="flLogo" src="images/links/FestivalLovers_Logo.png"
+                         alt="FestivalLovers Logo">
                 </a>
                 <a class="headerSection__flLogoLink headerSection__flLogoLink--white" href="http://deepdevdiver.com/">
-                <img  class="headerSection__flLogoWhite" id="flLogoWhite" src="images/links/FestivalLovers_Logo_weiss.png" alt="FestivalLovers Logo">
+                    <img class="headerSection__flLogoWhite" id="flLogoWhite"
+                         src="images/links/FestivalLovers_Logo_weiss.png" alt="FestivalLovers Logo">
                 </a>
                 <a class="headerSection__IconLike" href="http://deepdevdiver.com/">
                     <svg height="23px" version="1.1" viewBox="0 0 24 23" width="24px" xmlns="http://www.w3.org/2000/svg"
@@ -138,7 +140,8 @@
 
                 <div class="navSection__titleContainer">
 
-                    <a href="overview-festivals.html" class="titles navSection__title navSection__title--1">Festivals</a>
+                    <a href="overview-festivals.html"
+                       class="titles navSection__title navSection__title--1">Festivals</a>
                     <a href="#magazineSection" class="titles navSection__title navSection__title--2">Magazin</a>
                     <a href="#newsSection" class="titles navSection__title navSection__title--3">News</a>
 
@@ -377,7 +380,7 @@
                 </div>
 
             </div>
-            <img  class="titleSection__img" alt="festival picture" src="images/links/BigTeaser.png"
+            <img class="titleSection__img" alt="festival picture" src="images/links/BigTeaser.png"
                  title="festival picture">
 
             <!--start with magazinSection-->
@@ -480,29 +483,39 @@
                     die Samples an und entdecke deine Leidenschaft</p>
                 <div class="discoverySection__imgContainer">
                     <div class="discoverySection__imgBox discoverySection__imgBox--jazz">
-                        <div class="discoverySection__play"></div>
-                        <div class="discoverySection__stop"></div>
-                        <audio src=""></audio>
+                        <div class="discoverySection__contBox">
+                            <div class="discoverySection__play"></div>
+                            <div class="discoverySection__stop"></div>
+                            <audio src=""></audio>
+                        </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--hiphop">
-                        <div class="discoverySection__play"></div>
-                        <div class="discoverySection__stop"></div>
-                        <audio src=""></audio>
+                        <div class="discoverySection__contBox">
+                            <div class="discoverySection__play"></div>
+                            <div class="discoverySection__stop"></div>
+                            <audio src=""></audio>
+                        </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--indie">
-                        <div class="discoverySection__play"></div>
-                        <div class="discoverySection__stop"></div>
-                        <audio src=""></audio>
+                        <div class="discoverySection__contBox">
+                            <div class="discoverySection__play"></div>
+                            <div class="discoverySection__stop"></div>
+                            <audio src=""></audio>
+                        </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--poprock">
-                        <div class="discoverySection__play"></div>
-                        <div class="discoverySection__stop"></div>
-                        <audio src=""></audio>
+                        <div class="discoverySection__contBox">
+                            <div class="discoverySection__play"></div>
+                            <div class="discoverySection__stop"></div>
+                            <audio src=""></audio>
+                        </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--electronic">
-                        <div class="discoverySection__play"></div>
-                        <div class="discoverySection__stop"></div>
-                        <audio src=""></audio>
+                        <div class="discoverySection__contBox">
+                            <div class="discoverySection__play"></div>
+                            <div class="discoverySection__stop"></div>
+                            <audio src=""></audio>
+                        </div>
                     </div>
                 </div>
 
