change musicplayer div's to buttons

--- a/src/index.html
+++ b/src/index.html
@@ -484,36 +484,36 @@
                 <div class="discoverySection__imgContainer">
                     <div class="discoverySection__imgBox discoverySection__imgBox--jazz">
                         <div class="discoverySection__contBox">
-                            <div class="discoverySection__play"></div>
-                            <div class="discoverySection__stop"></div>
+                            <button class="discoverySection__play"></button>
+                            <button class="discoverySection__stop"></button>
                             <audio src=""></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--hiphop">
                         <div class="discoverySection__contBox">
-                            <div class="discoverySection__play"></div>
-                            <div class="discoverySection__stop"></div>
+                            <button class="discoverySection__play"></button>
+                            <button class="discoverySection__stop"></button>
                             <audio src=""></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--indie">
                         <div class="discoverySection__contBox">
-                            <div class="discoverySection__play"></div>
-                            <div class="discoverySection__stop"></div>
+                            <button class="discoverySection__play"></button>
+                            <button class="discoverySection__stop"></button>
                             <audio src=""></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--poprock">
                         <div class="discoverySection__contBox">
-                            <div class="discoverySection__play"></div>
-                            <div class="discoverySection__stop"></div>
+                            <button class="discoverySection__play"></button>
+                            <button class="discoverySection__stop"></button>
                             <audio src=""></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--electronic">
                         <div class="discoverySection__contBox">
-                            <div class="discoverySection__play"></div>
-                            <div class="discoverySection__stop"></div>
+                            <button class="discoverySection__play"></button>
+                            <button class="discoverySection__stop"></button>
                             <audio src=""></audio>
                         </div>
                     </div>
