succsess with console.log

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
 
                     <!-- end of loginSection -->
                 </div>
-                <div class="headerSection__IconTicket">
+                <button class="headerSection__IconTicket">
                     <svg height="23.92px" version="1.1" viewBox="0 0 24 22" width="26.8px"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -129,7 +129,7 @@
                         </g>
                     </svg>
                     <span class="headerSection__IconTicketText">TICKETS KAUFEN</span>
-                </div>
+                </button>
 
             </div>
 
