--- a/src/index.html
+++ b/src/index.html
@@ -392,7 +392,8 @@
                     <div class="magazineSection__box">
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
-                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -404,7 +405,8 @@
                     <div class="magazineSection__box">
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Wie soll ich mich bei Gewitter verhalten?</h2>
-                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -415,7 +417,8 @@
                     <div class="magazineSection__box">
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">7 Life Hacks für den Festivalbesuch</h2>
-                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -426,7 +429,8 @@
                     <div class="magazineSection__box">
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Erste Hilfe und die Reiseapotheke</h2>
-                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -437,7 +441,8 @@
                     <div class="magazineSection__box">
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Tipps zum Bier kaltstellen</h2>
-                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -448,7 +453,8 @@
                     <div class="magazineSection__box">
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Wo stelle ich mein Zelt auf?</h2>
-                            <button class="magazineSection__btn btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
